# mixpanel-export

./: README.md  mixpanel-export.cabal  stack.yaml
app/: Main.hs  MixpanelExport.hs
