name:                mixpanel-export
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/srdqty/mixpanel-export
license:             BSD3
license-file:        LICENSE
author:              Sophia Donataccio
maintainer:          srdqty@gmail.com
copyright:           2017 Sophia Donataccio
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable mixpanel-export
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       MixpanelExport
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwarn-incomplete-patterns -fwarn-dodgy-exports -fwarn-dodgy-imports -fwarn-unused-matches -fwarn-unused-imports -fwarn-unused-binds
  default-language:    Haskell2010

  build-depends:       base
                     , wreq
                     , base64-string
                     , lens
                     , bytestring
                     , text
                     , http-client
                     , http-client-tls
                     , optparse-generic
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , DeriveGeneric
                     , DataKinds
                     , TypeOperators

source-repository head
  type:     git
  location: https://github.com/srdqty/mixpanel-export
